Fixed spacing in CSS

--- a/css/signup.css
+++ b/css/signup.css
@@ -1,3 +1,9 @@
 input {
     border: 1px solid #000000;
 }
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
