--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,30 @@
 body {
     background-color: #ffffff;
     color: #000000;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 15vh;
+}
+
+.item1, .item2, .item3, .item4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    margin-top: 2rem; 
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 1rem;
 }
 
 #title, #subtitle { color: #64b5f6; }
